# quiz

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: error.rs  main.rs  question.rs  quiz.rs  utils.rs
static/assets/styles/: global.css
styles/: style.scss  transitions.scss
templates/: base.html  hello.html  index.html  integer.html  multiplechoice.html  text.html
